
package rti;

message MarketMode
	{
	required int32  template_id  = 154467;
	optional string symbol       = 110100;
	optional string exchange     = 110101;

	optional string market_mode  = 154106;
	optional string halt_reason  = 154838;
	optional string trade_date   = 100016;

	optional int32  ssboe        = 150100;
	optional int32  usecs        = 150101;
	}
