
package rti;

message RequestListAcceptedAgreements
	{       
	required int32   template_id   = 154467;
	repeated string  user_msg      = 132760;
	}
