
package rti;

message RequestListUnacceptedAgreements
	{       
	required int32   template_id   = 154467;
	repeated string  user_msg      = 132760;
	}
