
package rti;

message RequestReferenceData
	{                                
	required int32  template_id  = 154467;
	repeated string user_msg     = 132760;

	optional string symbol       = 110100;
	optional string exchange     = 110101;
	}