
package rti;

message RequestResumeBars
	{                                
	required int32    template_id   = 154467;
	repeated string   user_msg      = 132760;

	optional string   request_key   = 132758;
	}
