
package rti;

message RequestRithmicSystemGatewayInfo
	{     
	required int32    template_id = 154467;
	repeated string   user_msg    = 132760;

	optional string   system_name = 153628;
	}
