
package rti;

message RequestShowAgreement
	{       
	required int32   template_id    = 154467;
	repeated string  user_msg       = 132760;
	
	optional string  agreement_id   = 153407;
	}
