
package rti;

message ResponseExitPosition
	{                        
	required int32   template_id         = 154467;
	repeated string  user_msg            = 132760;

	repeated string  rq_handler_rp_code  = 132764;
	repeated string  rp_code             = 132766;

	optional string  symbol              = 110100;
	optional string  exchange            = 110101;
	}
