package rti;

message ResponseReplayExecutions
	{
	required int32   template_id  = 154467;
        repeated string  user_msg     = 132760;
	repeated string  rp_code      = 132766;
	}
